syntax = "proto3";

package calculator;

option go_package = "github.com/dionofrizal88/go-grpc/calculator/proto";

message CalculatorRequest{
    int32 operan_one = 1;
    int32 operan_two = 2;
}

message CalculatorResponse{
    int32 result = 1;
}

message FactorResponse{
    string result = 1;
}

message floatRequest{
    double number = 1;
}

message floatResponse{
    double res = 1;
}

message MaxRequest{
    int32 res = 1;
}

message MaxResponse{
    int32 res = 1;
}

service CalculatorService{
    rpc Sum(CalculatorRequest) returns (CalculatorResponse);
    rpc SumFactor(CalculatorRequest) returns (stream FactorResponse);
    rpc Average(stream floatRequest) returns (floatResponse);
    rpc Max(stream MaxRequest) returns (stream MaxResponse);
}